--- a/ApiRH/appsettings.Development.json
+++ b/ApiRH/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Settings": {
+    "SQLServerSettings": {
+      "ConnectionString": "Server=, 1433;Initial Catalog=ApiRHDb;User ID=;Password=;TrustServerCertificate=true"
+    }
   }
 }
