3# CRUD Candidato - Relacionamento

--- a/ApiRH/appsettings.Development.json
+++ b/ApiRH/appsettings.Development.json
@@ -7,7 +7,7 @@
   },
   "Settings": {
     "SQLServerSettings": {
-      "ConnectionString": "Server=, 1433;Initial Catalog=ApiRHDb;User ID=;Password=;TrustServerCertificate=true"
+      "ConnectionString": "Server=CT-5555\\CT5555;Initial Catalog=ApiRHDb;User ID=sa;Password=30030;Integrated Security=True; TrustServerCertificate=True"
     }
   }
 }
